# RARAG

./: .env  .env.example  .gitattributes  .gitignore  .qodo_write_test.txt  .~lock.allign.odt#  .~lock.frontend_architecture.tsv#  .~lock.temp.odt#  ACTUAL_SOLUTION.md  AGENTS.md  AGENTS.md.bak  AG_TRACING_SETUP_SUMMARY.md  COMPLETE_STATUS.md  Cargo.toml  DASHBOARD_IMPROVEMENTS.md  DASHBOARD_SETUP_SUMMARY.md  DEPLOYMENT.md  DISTRIBUTED_TRACING_FINAL_STATUS.md  Dioxus.toml  FINAL_FIX.md  FINAL_STATUS.md  FINAL_STEPS.md  FIXED_SOLUTION.md  GRAFANA.md  GRAFANA_DASHBOARD_IMPORT_GUIDE.md  GRAFANA_DASHBOARD_QUERIES.md  INSTALLER.md  LOKI_ERROR_LOGS_GUIDE.md  LOKI_MULTI_SOURCE_LOGS_GUIDE.md  LOKI_QUERY_PERFORMANCE_ANALYSIS.md  LOKI_TLS_SETUP_GUIDE.md  MIGRATION_README.md  MULTI_SOURCE_LOGGING_SUMMARY.md  OPENTELEMETRY_TRACING_COMPLETE_GUIDE.md  PHASE15_PLAN.md  PHASE_18_COMPLETE.md  PHASE_19_COMPLETE.md  PHASE_19_OPTIONS.md  PLAN.md  PROJECT_INSTRUCTIONS.md  (+93 more)
.qodo/: auth.key  config.json  update-cache.json  write-check.ok
.qodo.backup-2025-11-16-1/: update-cache.json
.qodo.backup-2025-11-16-1/agents/: frontend-helper.json  repo-maintainer.json
.qodo.backup-2025-11-16-1/workflows/: feature-impl.json
.qodo/agents/: default.json  default.toml
.qodo/workflows/: code-review.json
.qodo_patches/: api_mod_async_reindex.diff  api_mod_compact_handler.diff
backend/: Cargo.toml  build.rs
backend/src/: agent.rs  chunker.rs  dispatcher.rs  embedder.rs  handlers.rs  index.rs  lib.rs  main.rs  main.rs.bak  main.rs.bakt2  retriever.rs.bak2  retriever.rs.bak3  test_doc.rs
backend/tests/: e2e_test.rs  rate_limit_lru_eviction.rs  scan_retriever.rs  trace_propagation.rs  w3c_trace_context.rs
data/: vectors.json
db/: documents.db
dioxus/: settings.toml
docs/: RESOURCE_ATTRIBUTION.md  TRACE_ALERTING.md  TRACE_ALERTING_QUICKSTART.md
docu/: DEPLOYMENT.md  INSTALLER.md  Monitor-fr.md  PLAN-FRO  PLAN.md  README.md  TODO.MD  loki.md  performance-doc.site.md  performance.md  tmux-auto.md  troubleshooting-fro.md
docu/info/: rag
documents/: hello.txt  sample.txt
examples/: agent_example.rs  complete_demo.rs
frontend/: INTEGRATION_GUIDE.md  QUICKSTART.md  ff
frontend/fro/: Cargo.toml  Dioxus.toml  README.md  UPDATE_SERVICE.md  _index.html  dioxus.service  package-lock.json  package.json  sreenshot.odt  start-dioxus-service.sh  start-dioxus.sh  tailwind.config.js
frontend/fro/assets/: _index.html
frontend/fro/assets/styling/: index.css  output.css
frontend/fro/dioxus/: settings.toml
frontend/fro/public/: styles.css
frontend/fro/src/: api.rs  app.rs  lib.rs  main.rs
frontend/fro/src/components/: config_nav.rs  dark_mode_toggle.rs  header.rs  mod.rs  nav_dropdown.rs  search.rs
frontend/fro/src/components/monitor/: breadcrumb.rs  chart_placeholder.rs  data_table.rs  health_card.rs  mod.rs  nav_tabs.rs  panel.rs  progress_bar.rs  refresh_control.rs  row_header.rs  stat_card.rs
frontend/fro/src/monitoring/: analytics.rs  logger.rs  mod.rs
frontend/fro/src/pages/: about.rs  config.rs  hardware.rs  home copy.rs  home.rs  mod.rs  not_found.rs  other.rs  parameters.rs  prompt.rs  sampling.rs
frontend/fro/src/pages/hardware/: components.rs  constants.rs  help_content.rs  helpers.rs  mod.rs  state.rs
frontend/fro/src/pages/monitor/: cache.rs  index_page.rs  logs.rs  mod.rs  overview.rs  rate_limits.rs  requests.rs
frontend/fro/src/views/: home.rs
index/tantivy/: .managed.json  meta.json
installers/: install-windows-v1.0.0.ps1
kanweg/: alertmanager_install.sh
ops/observability/: README.md  prometheus.yml
prometheus/: alerts-trace-anomalies.yml
scripts/: cargo_wrap.sh  cmd_wrap.sh  compare_chunkers.sh  test_rate_limit.sh  test_rate_limit_read_write.sh
src/: agent.rs  agent_memory.rs  api.rs.bak2  chunker.rs  config.rs  embedder.rs  handlers.rs  index.rs  lib.rs  main.rs  parser.rs  path_manager.rs  retriever.rs  retriever.rs.bak  rules.rs.bak
src/api/: agent_routes.rs  api.rs  composer_routes.rs  decision_engine_routes.rs  memory_routes.rs  mod.rs  tool_routes.rs  upload_routes.rs
src/cache/: cache_layer.rs  mod.rs  redis_cache.rs
src/db/: schema_init.rs
src/installer/: checks.rs  ci_cd_builder.rs  config.rs  detector.rs  errors.rs  (+8 more)
tantivy_index/: .managed.json  meta.json
test_tantivy_index/: .managed.json  meta.json
tests/: e2e_test.rs  metrics_buckets.rs  monitoring_pprof.rs  rate_limit.rs  rate_limit_lru_eviction.rs  rate_limit_middleware_integration_test.rs  rate_limit_read_write.rs  retriever_tests.rs  retriever_tests.rs.bak  scan_retriever.rs  trace_propagation.rs  w3c_trace_context.rs
(+117 files in other folders)
