[package]
name = "ag"
version = "13.1.2"
edition = "2021"
authors = ["pde"]

[dependencies]
# Core
llm = "1.3.4"
rusqlite = "0.37.0"
tantivy = "0.24.2"
pdf-extract = "0.7"

# Web Framework
actix-web = "4.11.0"
actix-cors = "0.7"
actix-multipart = "0.7.2"

# Async Runtime
tokio = "1.47.1"
futures-util = "0.3.31"

# Serialization
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

# File System & Utilities
notify = "6"
dirs = "6.0.0"
ctrlc = "3.5.0"
tempfile = "3"
walkdir = "2"
fs2 = "0.4"
thiserror = "1.0"

# Data Processing
seahash = "4.1.0"
rayon = "1.10"
regex = "1.10"
lru = "0.12"

# Logging & Tracing
tracing = "0.1"
prometheus = "0.13"  # Metrics

# Time & IDs
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Configuration
dotenvy = "0.15"

# Redis (Phase 12)
redis = { version = "0.32", features = ["connection-manager", "tokio-comp", "aio"] }

# Installer Dependencies (v13.1.2) - OPTIONAL
clap = { version = "4.5", optional = true }
indicatif = { version = "0.17", optional = true }
colored = { version = "2.1", optional = true }
dialoguer = { version = "0.11", optional = true }
home = { version = "0.5", optional = true }
directories = { version = "5.0", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
async-trait = "0.1.89"
lazy_static = "1.5.0"
reqwest = "0.12.24"

tracing-appender = "0.2"
parking_lot = "0.12"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

[features]
default = []
# Phase 13.1.0a: Installer feature - enables all installer functionality
installer = [
    "clap",
    "indicatif",
    "colored",
    "dialoguer",
    "home",
    "directories",
    "tar",
    "flate2",
    "sha2"
]
# Full feature set: all capabilities
full = ["installer"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0


