[workspace]
members = [
    "backend",
    "frontend/fro"
]
default-members = ["backend"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["pde"]

[workspace.dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
