[package]
name = "fro"
version = "0.1.0"
authors = ["pde"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["web", "router"] }
manganis = "0.6"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "DomTokenList", "Storage"] }
gloo-net = "0.6"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
