[package]
name = "fro"
version = "0.1.0"
authors = ["pde"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["web", "router"] }
manganis = "0.6"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "DomTokenList", "Storage", "console"] }
gloo-net = "0.6"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# WebSocket for streaming responses
tokio = { version = "1", features = ["rt"] }
tokio-tungstenite = "0.21"

# State management (optional but helpful for complex UIs)
dioxus-signals = "0.6"

# HTTP client improvements
reqwest = { version = "0.11", features = ["json", "stream"] }

# UI component library (optional)
dioxus-free-components = "0.3"  # Or similar

# Markdown rendering (for displaying LLM responses)
markdown = "1.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
